--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,124 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <nav class="bg-[#002130] border-gray-200 px-4 lg:px-6 py-2.5">
+        <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+            <!--Logo + Brand name-->
+            <div class="flex items-center space-x-2">
+                <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" alt="pictures" class="h-15 w-auto">
+                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
+            </div>
+            <!--Nav links for shop section-->
+            <div class="flex items-center lg:order-2 py-2 px-2">
+                <a href="#" class="block text-white py-2 ml-4">Home</a>
+                <a href="#" class="block text-white py-2 ml-4">Cart</a>
+                <button class="p-2 rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </nav>
+    <!--Heading-->
+    <section>
+        <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
+            <div class="mr-auto place-self-center lg:col-span-7">
+                <h1 class="w-full mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Shop</h1>
+            </div>
+        </div>
+    </section>
+    <!--Products-->
+    <section class="bg-white py-12">
+        <div class="max-w-6xl mx-auto px-4">
+            <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-4">
+                <!-- Item 1 -->
+                <div class="text-center">
+                    <img src="image 3.jpg" class="w-full rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold">Velvet Bloom</h3>
+                    <p class="text-gray-600 mt-2 text-lg">$340.00</p>
+                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
+                </div>
+
+                <!-- Item 2 -->
+                <div class="text-center">
+                    <img src="image 4.jpg" class="w-full rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold">Cedar Grover</h3>
+                    <p class="text-gray-600 mt-2 text-lg">$325.85</p>
+                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
+                </div>
+
+                <!-- Item 3 -->
+                <div class="text-center">
+                    <img src="image 5.jpg" class="w-full rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold">Ocean Mist</h3>
+                    <p class="text-gray-600 mt-2 text-lg">$300.00</p> 
+                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
+                </div>
+
+                <!-- Item 4-->
+                 <div class="text-center">
+                    <img src="image 7.png" class="w-full rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold">Amber Noir</h3>
+                    <p class="text-gray-600 mt-2 text-lg">$345.99</p>
+                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Footer-->
+    <footer class="p-4 bg-[#002130] sm:p-6">
+        <div class="mx-auto max-w-screen-xl">
+            <div class="md:flex md:justify-between">
+                <div class="mb-6 md:mb-0">
+                    <a href="#" class="flex items-center">
+                        <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" class="mr-3 h-8" alt="Vellora" />
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
+                    </a>
+                </div>
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Shop</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="shop.html" class="hover:underline">Product</a>
+                            </li>
+                            <li>
+                                <a href="#" class="hover:underline">Cart</a>
+                            </li>
+                        </ul>
+                    </div>
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Contact Us</h2>
+                    <ul class="text-gray-600 dark:text-gray-400">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline ">Email</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline">Phone Number</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                    <ul class="text-gray-600 dark:text-gray-400">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="my-6 border-gray-700 sm:mx-auto lg:my-8" />
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <span class="text-sm text-gray-500 sm:text-center">© 2022 Vellora™. All Rights Reserved.</span>
+        </div>
+    </div>
+</footer>
+</body>
+</html>
 </body>
 </html>
