--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vellora</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
@@ -17,7 +17,7 @@
             </div>
             <!--Nav links for shop section-->
             <div class="flex items-center lg:order-2 py-2 px-2">
-                <a href="#" class="block text-white py-2 ml-4">Home</a>
+                <a href="Home.html" class="block text-white py-2 ml-4">Home</a>
                 <a href="#" class="block text-white py-2 ml-4">Cart</a>
                 <button class="p-2 rounded-full">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-6 h-6 text-white">
