--- a/Contact.html
+++ b/Contact.html
@@ -30,40 +30,91 @@
         </div>
     </section>
     <!--Contact Form-->
-    <section class="bg-[#002130]">
+    <section class="text-gray-700">
         <form class="space-y-4">
             <div class="grid lg:grid-cols-2 md:grid-col-2 gap-10">
                 <!--FirstName-->
                 <div class="grid grid-col-2 gap-6 px-4 md:px-8 py-4">
                     <div>
-                        <label class="block text-sm font-medium text-gray-200">First Name</label>
-                        <input type="text" id="firstName" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="Enter First Name">
+                        <label class="block text-sm font-medium">First Name</label>
+                        <input type="text" id="firstName" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="enter First Name">
                     </div>
                     <!--lastName-->
                     <div>
-                        <label class="block text-sm font-medium text-gray-200">Last Name</label>
-                        <input type="text" id="lastName" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="Enter Last Name">
+                        <label class="block text-sm font-medium">Last Name</label>
+                        <input type="text" id="lastName" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="enter Last Name">
                     </div>
                     <!--Email-->
                     <div>
-                        <label class="block text-sm font-medium text-gray-200">Email</label>
-                        <input type="email" id="email" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="Enter Email">
+                        <label class="block text-sm font-medium">Email</label>
+                        <input type="email" id="email" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="example@gmail.com">
                     </div>
                 </div>
                     <!--Message-->
                     <div class="px-4 md:px-8 py-4">
-                        <label class="block text-sm font-medium text-gray-200">Message</label>
+                        <label class="block text-sm font-medium">Message</label>
                         <textarea id="message" rows="8" class="w-full border border-gray-500 rounded-lg rounded-md" placeholder="Enter your message here"></textarea>
                     </div>
                 </div>
             </div>
         </form>
         <!--Terms and Condition-->
-        <div class="text-sm text-gray-200 px-4 md:px-8 pb-4">
+        <div class="text-sm px-4 md:px-8 pb-4">
             <p class="pb-2">By submitting this form you agree to our <a href="#" class="text-blue-600 hover:underline">terms and conditions</a> and our <a href="#" class="text-blue-600 hover:underline">privacy policy</a> which explains how we may collect, use and disclose your personal information including to third parties.</p>
             <button type="submit" class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">Submit</button>
         </div> 
     </section>
-    
+    <!--Footer-->
+    <footer class="p-4 bg-[#002130] sm:p-6">
+        <div class="mx-auto max-w-screen-xl">
+            <div class="md:flex md:justify-between">
+                <div class="mb-6 md:mb-0">
+                    <a href="#" class="flex items-center">
+                        <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" class="mr-3 h-8" alt="Vellora" />
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
+                    </a>
+                </div>
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Shop</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="shop.html" class="hover:underline">Product</a>
+                            </li>
+                            <li>
+                                <a href="#" class="hover:underline">Cart</a>
+                            </li>
+                        </ul>
+                    </div>
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Contact Us</h2>
+                    <ul class="text-gray-600 dark:text-gray-400">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline ">Email</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline">Phone Number</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                    <ul class="text-gray-600 dark:text-gray-400">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="my-6 border-gray-700 sm:mx-auto lg:my-8" />
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <span class="text-sm text-gray-500 sm:text-center">© 2022 Vellora™. All Rights Reserved.</span>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
