--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
             <!--Nav links for shop section-->
             <div class="flex items-center lg:order-2 py-2 px-2">
                 <a href="Home.html" class="block text-white py-2 px-2 ml-4">Home</a>
-                <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded">Support</button>
+                <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded">Support</button></a>
             </div>
         </div>
     </nav>
@@ -93,7 +93,7 @@
                             <a href="#" class="hover:underline ">Email</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:underline">Phone Number</a>
+                            <a href="tel:+2348157721374" class="hover:underline">Phone Number</a>
                         </li>
                     </ul>
                 </div>
