--- a/shop.html
+++ b/shop.html
@@ -102,7 +102,7 @@
                             <a href="#" class="hover:underline ">Email</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:underline">Phone Number</a>
+                            <a href="tel:+2348157721374" class="hover:underline">Phone Number</a>
                         </li>
                     </ul>
                 </div>
