--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
                 </div>
                 <!--Shop button-->
                 <div class="flex items-center lg:order-2">
-                    <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded">Shop</button></a>
+                    <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Shop</button></a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -32,10 +32,10 @@
                             <a href="Home.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white text-xl" aria-current="page">Home</a>
                         </li>
                         <li>
-                            <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl">Contact</a>
+                            <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Contact</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl">Our Story</a>
+                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
                         <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </a>
                     <a href="shop.html" class="inline-flex items-center justify-center px-5 py-3 text-center">
-                        <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded">Shop</button>
+                        <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Shop</button>
                     </a> 
                 </div>
                 <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
@@ -105,7 +105,7 @@
                         <h3 class="text-2xl md: text-5xl font-semibold mb-4">A Fragrance Born of Passion</h3>
                         <p class="text-gray-200 mb-4">From the heart of our inspiration to your skin - a narrative of devotion bottled into an unforgettable olfactory journey.</p>
                         <p class="text-gray-200 mb-8">Feel the intensity. Wear the devotion. A fragrance crafted from passion to amplify your own unique fire.</p>
-                        <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded">Shop</button></a>
+                        <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Shop</button></a>
                     </div>
 
                     <!--Right Image-->
@@ -127,7 +127,7 @@
                         <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </a>
                     <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-center">
-                        <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-6 rounded">Subscribe</button>
+                        <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-6 rounded transition-color duration-200">Subscribe</button>
                     </a> 
                 </div>
                 <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
@@ -136,6 +136,7 @@
             </div>
         </section>
     </main>
+    <!--Footer-->
     <footer class="p-4 bg-[#002130] sm:p-6">
         <div class="mx-auto max-w-screen-xl">
             <div class="md:flex md:justify-between">
