--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
             <!--Nav links for shop section-->
             <div class="flex items-center lg:order-2 py-2 px-2">
                 <a href="Home.html" class="block text-white py-2 px-2 ml-4">Home</a>
-                <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded">Support</button></a>
+                <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded transition-color duration-200">Support</button></a>
             </div>
         </div>
     </nav>
@@ -61,7 +61,7 @@
         <!--Terms and Condition-->
         <div class="text-sm px-4 md:px-8 pb-4">
             <p class="pb-2">By submitting this form you agree to our <a href="#" class="text-blue-600 hover:underline">terms and conditions</a> and our <a href="#" class="text-blue-600 hover:underline">privacy policy</a> which explains how we may collect, use and disclose your personal information including to third parties.</p>
-            <button type="submit" class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">Submit</button>
+            <button type="submit" class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded transition-color duration-200">Submit</button>
         </div> 
     </section>
     <!--Footer-->
