--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
                     <img src="image 3.jpg" class="w-full rounded-lg mb-4">
                     <h3 class="text-xl font-semibold">Velvet Bloom</h3>
                     <p class="text-gray-600 mt-2 text-lg">$340.00</p>
-                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
+                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded transition-color duration-200">ADD TO CART</button>
                 </div>
 
                 <!-- Item 2 -->
@@ -125,7 +125,5 @@
         </div>
     </div>
 </footer>
-</body>
-</html>
 </body>
 </html>
