--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
             </div>
             <!--Nav links for shop section-->
             <div class="flex items-center lg:order-2 py-2 px-2">
-                <a href="Home.html" class="block text-white py-2 px-2 ml-4">Home</a>
+                <a href="index.html" class="block text-white py-2 px-2 ml-4">Home</a>
                 <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded transition-color duration-200">Support</button></a>
             </div>
         </div>
