--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
             </div>
             <!--Nav links for shop section-->
             <div class="flex items-center lg:order-2 py-2 px-2">
-                <a href="Home.html" class="block text-white py-2 ml-4">Home</a>
+                <a href="index.html" class="block text-white py-2 ml-4">Home</a>
                 <a href="#" class="block text-white py-2 ml-4">Cart</a>
                 <button class="p-2 rounded-full">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-6 h-6 text-white">
