--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
             </div>
             <!--Nav links for shop section-->
-            <div class="flex items-center lg:order-2 py-2 px-2">
+            <div class="flex items-center lg:order-2 py-2">
                 <a href="index.html" class="block text-white py-2 ml-4">Home</a>
                 <a href="#" class="block text-white py-2 ml-4">Cart</a>
                 <button class="p-2 rounded-full">
