--- a/shop.html
+++ b/shop.html
@@ -99,7 +99,7 @@
                     <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Contact Us</h2>
                     <ul class="text-gray-600 dark:text-gray-400">
                         <li class="mb-4">
-                            <a href="#" class="hover:underline ">Email</a>
+                            <a href="mailto:osobonyeboma@gmail.com" class="hover:underline ">Email</a>
                         </li>
                         <li>
                             <a href="tel:+2348157721374" class="hover:underline">Phone Number</a>
