--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="bg-[#002130] border-gray-200 px-4 lg:px-6 py-2.5">
+    <nav class="bg-[#002130] border-gray-200 px-4 lg:px-6 py-2">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <!--Logo + Brand name-->
             <div class="flex items-center space-x-2">
@@ -25,7 +25,7 @@
     <!--Heading-->
     <section class="max-w-4xl mx-auto p-4 md:p-8">
         <div class="text-center">
-            <h1 class="w-full py-6 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Shop</h1>
+            <h1 class="w-full py-6 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Contact Us</h1>
             <span class="lg:text-xl text-gray-700">Getting feedback from the customer always keeps the service growing to connect and suit the customers. Feel free to reach out to us if the need arises.</span>
         </div>
     </section>
