--- a/shop.html
+++ b/shop.html
@@ -8,28 +8,40 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="bg-[#002130] border-gray-200 px-4 lg:px-6 py-2.5">
+    <nav class="bg-[#002130] border-gray-200 px-4 lg:px-6 py-2">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <!--Logo + Brand name-->
             <div class="flex items-center space-x-2">
                 <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" alt="pictures" class="h-15 w-auto">
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
             </div>
-            <!--Nav links for shop section-->
-            <div class="flex items-center lg:order-2 py-2">
-                <a href="index.html" class="block text-white py-2 ml-4">Home</a>
-                <a href="#" class="block text-white py-2 ml-4">Cart</a>
-                <button class="p-2 rounded-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-6 h-6 text-white">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
-                    </svg>
+            <!--Cart Button-->
+            <div class="flex items-center lg:order-2">
+                <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Cart</button></a>                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 </button>
+            </div>
+            <!--Nav links-->
+            <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
+                <ul class="flex flex-col mt-4 lg:flex-row lg:space-x-8 lg:mt-0">
+                    <li>
+                        <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white text-xl" aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Contact</a>
+                    </li>
+                    <li>
+                    <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <!--Heading-->
     <section>
-        <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
+        <div class="text-center max-w-screen-xl px-4 py-6 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
             <div class="mr-auto place-self-center lg:col-span-7">
                 <h1 class="w-full mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Shop</h1>
             </div>
