update on project

--- a/Our Story.html
+++ b/Our Story.html
@@ -15,9 +15,10 @@
                 <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" alt="pictures" class="h-15 w-auto">
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
             </div>
-            <!--Cart Button-->
+           <!--Support Button-->
             <div class="flex items-center lg:order-2">
-                <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Cart</button></a>                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                <a href="shop.html"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Shop</button></a>
+                <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                     <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
@@ -33,56 +34,17 @@
                         <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Contact</a>
                     </li>
                     <li>
-                    <a href="Our Story.html" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
+                        <a href="Our Story.html" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!--Heading-->
-    <section>
-        <div class="text-center max-w-screen-xl px-4 py-6 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
-            <div class="mr-auto place-self-center lg:col-span-7">
-                <h1 class="w-full mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Shop</h1>
-            </div>
-        </div>
-    </section>
-    <!--Products-->
-    <section class="bg-white py-12">
-        <div class="max-w-6xl mx-auto px-4">
-            <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-4">
-                <!-- Item 1 -->
-                <div class="text-center">
-                    <img src="image 3.jpg" class="w-full rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold">Velvet Bloom</h3>
-                    <p class="text-gray-600 mt-2 text-lg">$340.00</p>
-                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded transition-color duration-200">ADD TO CART</button>
-                </div>
-
-                <!-- Item 2 -->
-                <div class="text-center">
-                    <img src="image 4.jpg" class="w-full rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold">Cedar Grover</h3>
-                    <p class="text-gray-600 mt-2 text-lg">$325.85</p>
-                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
-                </div>
-
-                <!-- Item 3 -->
-                <div class="text-center">
-                    <img src="image 5.jpg" class="w-full rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold">Ocean Mist</h3>
-                    <p class="text-gray-600 mt-2 text-lg">$300.00</p> 
-                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
-                </div>
-
-                <!-- Item 4-->
-                 <div class="text-center">
-                    <img src="image 7.png" class="w-full rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold">Amber Noir</h3>
-                    <p class="text-gray-600 mt-2 text-lg">$345.99</p>
-                    <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-7 rounded">ADD TO CART</button>
-                </div>
-            </div>
+    <section class="max-w-6xl mx-auto p-4 md:p-8">
+        <div class="text-center">
+            <h1 class="w-full py-6 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Story of Vellora</h1>
+            <span class="lg:text-xl text-gray-700">Our journey didn't begin in a lab. It began in a quiet, sun-warmed attic, sifting through a wooden box of forgotten treasures. It was there, tucked beneath lace and faded photographs, that our founder found it: a small, glass vial, half-empty, belonging to a grandmother she barely knew. The stopper, when finally opened, didn't just release a scent; it released a story. It was the whisper-soft scent of vanilla, the powdery warmth of old books, and the elusive trace of a flower that no longer bloomed in the garden. It was the scent of a memory. In that instant, a realization sparked. In our fast-paced, modern world, so many fragrances felt loud but hollow, present but fleeting. They were accessories, not companions. They masked, but they didn't reveal. What if a perfume could be more? What if it could be a bridge to our most cherished moments, a way to carry the people and places we love with us, invisibly, every single day? This question became an obsession, a passion, and finally, a calling. Vellora was born from this desire—not just to create perfume, but to bottle feeling. The name itself is a whisper of our promise, blending the ideas of velvet, allure, and flora. It represents the soft veil of scent that connects us to the stories that make us who we are. Our founder embarked on a journey, from the dew-covered rose fields of Grasse to the spice-laden markets of Zanzibar, seeking not just the finest ingredients, but the ones that held an echo of emotion. We are not just perfumers; we are memory-keepers. We believe in the slow art of creation, of letting blends rest and mature, of finding the perfect harmony that doesn't just smell beautiful, but feels true. Each fragrance we compose is a liquid story. One might be the comforting embrace of a cashmere blanket, another the bright, sharp joy of a first laugh, and another the quiet melancholy of a sunset over the ocean. Vellora is our invitation to you. An invitation to slow down, to breathe deep, and to find the scent that speaks not just to you, but for you. This is more than perfume. It's your story, told in scent.</span>
         </div>
     </section>
     <!--Footer-->
