--- a/Contact.html
+++ b/Contact.html
@@ -15,15 +15,32 @@
                 <img src="ChatGPT_Image_Dec_4__2025__03_43_16_PM-removebg-preview.png" alt="pictures" class="h-15 w-auto">
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vellora</span>
             </div>
-            <!--Nav links for shop section-->
-            <div class="flex items-center lg:order-2 py-2 px-2">
-                <a href="index.html" class="block text-white py-2 px-4 ml-4">Home</a>
-                <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-2 rounded transition-color duration-200">Support</button></a>
+           <!--Support Button-->
+            <div class="flex items-center lg:order-2">
+                <a href="https://wa.link/wb39fp"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-5 rounded transition-color duration-200">Support</button></a>
+                <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                </button>
             </div>
-        </div>
+            <!--Nav links-->
+            <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
+                <ul class="flex flex-col mt-4 lg:flex-row lg:space-x-8 lg:mt-0">
+                    <li>
+                        <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white text-xl" aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Contact</a>
+                    </li>
+                    <li>
+                    <a href="Our Story.html" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
+                    </li>
+                </ul>
+            </div>
     </nav>
     <!--Heading-->
-    <section class="max-w-4xl mx-auto p-4 md:p-8">
+    <section class="max-w-5xl mx-auto p-4 md:p-8">
         <div class="text-center">
             <h1 class="w-full py-6 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl">Contact Us</h1>
             <span class="lg:text-xl text-gray-700">Getting feedback from the customer always keeps the service growing to connect and suit the customers. Feel free to reach out to us if the need arises.</span>
