--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="Contact.html" class="block py-2 pr-4 pl-3 text-gray-700 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Contact</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
+                            <a href="Our Story.html" class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 text-xl transition-color duration-200">Our Story</a>
                         </li>
                     </ul>
                 </div>
