--- a/index.html
+++ b/index.html
@@ -175,16 +175,10 @@
         <!--Newsletter-->
          <section class="bg-white py-4">
             <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
-                <div class="mr-auto place-self-center lg:col-span-7">
+                <div class="mr-auto lg:col-span-7">
                     <h3 class="w-full mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl font-semibold">Subscribe To Our Newletter</h3>
                     <p class="w-full mb-6 font-light text-gray-600 lg:mb-8 md:text-lg lg:text-xl">At Vellora, every scent is a story woven from rare botanicals and timeless artistry. Each fragrance is crafted to awaken your senses, stir your soul, and turn fleeting moments into lasting memories.</p>
-                    <a href="#" class="inline-flex items-center justify-center px-0 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700">
-                        Find Out More
-                        <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    </a>
-                    <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-center">
-                        <button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-6 rounded transition-color duration-200">Subscribe</button>
-                    </a> 
+                    <a href="#"><button class="bg-cyan-500 hover:bg-cyan-700 text-white py-3 px-6 rounded transition-color duration-200">Subscribe</button></a> 
                 </div>
                 <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
                     <img src="image 6.jpg" alt="mockup">
