mobile-menu update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </button>
                 </div>
                 <!--Hamburger menu list-->
-                    <div class="absolute right-0 top-17 w-40 md:hidden hidden bg-cyan-700" id="mobile-menu-2">
+                    <div class="absolute right-0 top-17 w-full text-center md:hidden hidden bg-cyan-700" id="mobile-menu-2">
                         <div class="py-2">
                             <a href="index.html" class="text-white hover:text-gray-700 block px-3 py-2 rounded-md text-base">Home</a>
                             <a href="Contact.html" class="text-white hover:text-gray-700 block px-3 py-2 rounded-md text-base">Contact</a>
